Bug 692222 - Android package broken
Summary: Android package broken
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: apps (show other bugs)
Version: unspecified
Hardware: PC All
: P4 normal
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-22 15:15 UTC by Dominic Battre
Modified: 2011-07-04 13:54 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
Fix for this bug. (10.54 KB, patch)
2011-05-22 15:16 UTC, Dominic Battre
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dominic Battre 2011-05-22 15:15:46 UTC
The Android package of MuPDF is broken is several ways. The patch tries to fix this.

- The Android package does not compile unless the directories in thirdparty are renamed (see changes to readme file).

- There is no pregen package mentioned in the readme.

- There is no file local.properties that is mentioned in the readme.

- Several file names changed.

- pdf_get_page_count was renamed to pdf_count_pages.

- parameters of pdf_load_page have changed.

- parameters of fz_new_pixmap_with_data have changed.

- parameters of fz_execute_display_list have changed.

- page numbering is now 0 based instead of 1 based.
Comment 1 Dominic Battre 2011-05-22 15:16:29 UTC
Created attachment 7525 [details]
Fix for this bug.
Comment 2 Robin Watts 2011-06-06 14:44:20 UTC
Fixed in:

commit 5aaae3d936afc0aa4ff999b42b5a754c40885f75
Author: Robin Watts <Robin.Watts@artifex.com>
Date:   Tue May 31 14:16:28 2011 +0100

    Fix android build; bug 692222.

    Bring the MuPDF android build up to date with the latest source changes.
    Many thanks to Dominic Battre for his helpful report in bug 692222.


Many thanks!
Comment 3 Ondřej Kroupa 2011-06-26 13:05:11 UTC
The build still doesn't work for me. I am stucked at this:

Gdbserver      : [arm-linux-androideabi-4.4.3] libs/armeabi/gdbserver
Gdbsetup       : libs/armeabi/gdb.setup
Gdbserver      : [arm-linux-androideabi-4.4.3] libs/armeabi-v7a/gdbserver
Gdbsetup       : libs/armeabi-v7a/gdb.setup
Compile thumb  : mupdfcore <= dev_text.c
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:6:22: error: ft2build.h: No such file or di
rectory
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:7:10: error: #include expects "FILENAME" or
 <FILENAME>
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:8:10: error: #include expects "FILENAME" or
 <FILENAME>
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c: In function 'fz_text_extract_span':
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:215: error: 'FT_Face' undeclared (first use
 in this function)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:215: error: (Each undeclared identifier is
reported only once
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:215: error: for each function it appears in
.)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:215: error: expected ';' before 'face'
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:237: error: 'face' undeclared (first use in
 this function)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:318: error: 'FT_Fixed' undeclared (first us
e in this function)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:318: error: expected ';' before 'ftadv'
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:319: error: 'FT_LOAD_NO_BITMAP' undeclared
(first use in this function)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:319: error: 'FT_LOAD_NO_HINTING' undeclared
 (first use in this function)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:319: error: 'FT_LOAD_IGNORE_TRANSFORM' unde
clared (first use in this function)
C:/Users/Seal/Android/mupdf/android/jni/../../fitz/dev_text.c:324: error: 'ftadv' undeclared (first use i
n this function)
make: *** [/cygdrive/c/Users/Seal/Android/mupdf/android/obj/local/armeabi/objs-debug/mupdfcore/../../fitz
/dev_text.o] Error 1
Comment 4 Ondřej Kroupa 2011-06-26 14:47:09 UTC
I have passed over upper said issue thanks to adding thirdparty and pregen folder. Now I am getting this:


/home/seal/Android/mupdf/android/jni/../../pdf/pdf_cmap_table.c:5:35: error: ../generated/cmap_cns.h: No such file or directory
/home/seal/Android/mupdf/android/jni/../../pdf/pdf_cmap_table.c:6:34: error: ../generated/cmap_gb.h: No such file or directory
/home/seal/Android/mupdf/android/jni/../../pdf/pdf_cmap_table.c:7:37: error: ../generated/cmap_japan.h: No such file or directory
/home/seal/Android/mupdf/android/jni/../../pdf/pdf_cmap_table.c:8:37: error: ../generated/cmap_korea.h: No such file or directory
/home/seal/Android/mupdf/android/jni/../../pdf/pdf_cmap_table.c:14: error: 'cmap_78_EUC_H' undeclared here (not in a function)
...
Comment 5 Robin Watts 2011-07-04 13:54:05 UTC
The generated directory is produced by any standard linux or windows build.

Apologies, the docs should be clearer on both thirdparty and generated, and I have just updated them to have sections on these. This should make its way through to the main git repo shortly.

Thanks/Sorry.